--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,16 +5,7 @@ pipeline {
          steps {
             git 'https://github.com/ashishankit21/mavenproject.git'
          }
-      }
-      stage('Compile') {
-         steps {
-            bat 'mvn compile'
-         }
-      stage('Test') {
-         steps {
-            bat 'mvn test'
-         }
-      }
+       }
       stage('Package') {
          steps {
             bat 'mvn package'
@@ -22,7 +13,7 @@ pipeline {
       }
       stage('Execute') {
          steps {
-            bat 'java -jar "C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\cts_pipeline\target>java -jar cts-1.0-SNAPSHOT.jar"'
+            bat 'java -jar "C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\jobs\cts_pipeline\workspace\target>java -jar cts-1.0-SNAPSHOT.jar"'
          }
       }
    }
