--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
       }
       stage('Execute') {
          steps {
-            bat 'java -jar "C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\jobs\cts_pipeline\workspace\target>java -jar cts-1.0-SNAPSHOT.jar"'
+            bat 'java -jar "C:\Windows\System32\config\systemprofile\AppData\Local\Jenkins\.jenkins\workspace\cts_pipeline\target>java -jar cts-1.0-SNAPSHOT.jar"'
          }
       }
    }
